fixing z-index issue with back of card

--- a/src/app/matching-game/card/card.component.scss
+++ b/src/app/matching-game/card/card.component.scss
@@ -139,6 +139,7 @@ h3 {
   color: red;
   font-size: 4rem;
   margin: 1rem auto;
+  z-index: 1001;
   text-shadow: 1px 1px 0 #000,
   -1px 1px 0 #000,
   1px -1px 0 #000,
